FIXED: The not centered content, with small screens the landing page looks very nice, BIGGER SCREENS WIP. DEV: Desktop App work.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,3 @@
-#root {
-  max-width: 80%;
-}
 
 .btn-continue {
   border: 1px solid #9ED2C6;
@@ -9,4 +6,38 @@
 
 .copyright {
   font-size: 10px
+}
+
+col {
+  display: flex;
+  flex: 1;
+  align-items: center;
+}
+
+.module-1,
+.module-2,
+.module-3 {
+  margin: 1em;
+}
+
+.flex-stack {
+  flex-direction: column;
+}
+
+.w80 {
+  /* Width 80% */
+  width: 80%;
+}
+
+
+@media screen and (min-width: 400px) {
+  body {
+    background-color: lightgreen;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  body {
+    background-color: lavender;
+  }
 }
